maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
def tracechemin(x:Int,y:Int,nb:Int):Boolean = {
^JediEscaper:2: error: expected class or object definition
def tracechemin(x:Int,y:Int,nb:Int):Boolean = {
^JediEscaper:37: error: expected class or object definition
def getBisctuit() {
^JediEscaper:48: error: expected class or object definition
def yaller(){
^JediEscaper:71: error: Missing closing brace `}' assumed here
  }
  ^